# python-project-template

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  github  pyproject.toml  setup.cfg
.github/: copilot-instructions.md
