[tool.poetry]
name = "name"
version = "0.1.1"
description = "description"
authors = ["Tianyu Hu <tyrionhuu@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
mypy = "^1.15.0"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pre-commit = "^4.1.0"
pipenv = "^2024.4.1"
flake8 = "^7.1.2"
nbstripout = "^0.8.1"


[[tool.poetry.source]]
# For use in Mainland China, you can use the following mirror source
name = "mirrors"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
priority = "primary"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"


[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.flake8]
ignore = "E203, E266, E501, W503"
max-line-length = 88
max-complexity = 18
select = "B,C,E,F,W,T4"

[tool.mypy]
ignore_missing_imports = true

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["./tests"]

# coverage report configuration
[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self\\.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]

# [tool.setuptools]
# py-modules = ['name']
